@@ -1,3 +1,11 @@
+2010-08-07  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	Allow running pic_flag test with different shell.
+	* tests/testsuite.at (LT_AT_CONFIGURE): Accept optional second
+	argument specifying the configure script to run.
+	* tests/pic_flag.at (override pic_flag at configure time):
+	Use LT_AT_CONFIGURE.
+
 2010-08-06  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	Fix ltdl-libdir test for C++ compilers.
